<resources>
    <string name="app_name">ParkingApp</string>
    <string name="str_horaIngreso">Hora de Ingreso</string>
    <string name="str_placa">Placa del Vehiculo</string>
    <string name="str_ingresoVehiculo">Ingreso de Vehiculos</string>
    <string name="str_PARQUEADERO">PARQUEADERO</string>
    <string name="str_INGRESARvEHICULOS">INGRESAR VEHICULOS</string>
    <string name="str_SACARvEHICULOS">SACAR VEHICULOS</string>
    <string name="str_LISTARvEHICULOS">LISTAR VEHICULOS</string>
    <string name="str_LISTADOtOTAL">LISTADO TOTAL</string>
    <string name="str_placaEjemplo">XXX-1234</string>
    <string name="str_FACTURAR">FACTURAR</string>
    <string name="str_Automovil">Automovil</string>
    <string name="str_Motocicleta">Motocicleta</string>
    <string name="Agregar">Agregar</string>
    <string name="filtrar">Filtrar</string>
    <string name="buscar">buscar</string>
    <string name="settings">Configuración</string>
    <string name="no_data">No data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
